improv. fix issue with dark theme and save file

--- a/GuiApplication/Views/MainWindow.xaml
+++ b/GuiApplication/Views/MainWindow.xaml
@@ -6,10 +6,22 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-
-    <NavigationView x:Name="MainNavigationView" SelectionChanged="NavigationView_SelectionChanged" Grid.Row="1" Header="This is Heade Text"  PaneDisplayMode="Left" OpenPaneLength="250"  IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
+    <NavigationView Name="MainNavigationView" SelectionChanged="NavigationView_SelectionChanged" Grid.Row="1" Header="This is Heade Text"  PaneDisplayMode="Left" OpenPaneLength="250"  IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
         <NavigationView.Resources>
-            <SolidColorBrush x:Key="NavigationViewExpandedPaneBackground" Color="{ThemeResource SolidBackgroundFillColorBase}"/>
+            <ResourceDictionary>
+                <SolidColorBrush x:Key="NavigationViewExpandedPaneBackground" Color="{ThemeResource SolidBackgroundFillColorBase}"/>
+                <ResourceDictionary.ThemeDictionaries>
+                    <ResourceDictionary x:Key="Dark">
+                        
+                        <SolidColorBrush x:Key="ButtonBackground" Color="{ThemeResource SystemBaseLowColor}"/>
+                        <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="{ThemeResource SystemBaseMediumLowColor}"/>
+                        <SolidColorBrush x:Key="ComboBoxBackground" Color="{ThemeResource SystemBaseLowColor}"/>
+                        <SolidColorBrush x:Key="ComboBoxBackgroundPointerOver" Color="{ThemeResource SystemBaseMediumLowColor}"/>
+                        <SolidColorBrush x:Key="NumberBoxBackground" Color="{ThemeResource SystemBaseLowColor}"/>
+                        <SolidColorBrush x:Key="NumberBoxBackgroundPointerOver" Color="{ThemeResource SystemBaseMediumLowColor}"/>
+                    </ResourceDictionary>
+                </ResourceDictionary.ThemeDictionaries>
+            </ResourceDictionary>
         </NavigationView.Resources>
 
         <NavigationView.MenuItems>
