--- a/GuiApplication/Views/Pages/HomePage.xaml
+++ b/GuiApplication/Views/Pages/HomePage.xaml
@@ -24,24 +24,22 @@
                     <StackPanel Orientation="Horizontal">
                         <TextBlock FontWeight="Bold" Name="WelcomeTextBox"/>
                     </StackPanel>
-                    <StackPanel Grid.Row="1" Margin="0,20,0,0" Orientation="Horizontal">
+                    <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
                         <TextBlock Margin="0,5,0,0" Name="SelectLanguageTextBox"/>
                         <ComboBox Margin="20,0,0,0" Name="LanguageComboBox" ItemsSource="{Binding AllCultureInfo}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal">
+                    <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
                         <TextBlock Margin="0,5,0,0" Name="SelectSavesFileTypeTextBox"/>
                         <ComboBox Margin="20,0,0,0" Name="SavesFileTypeComboBox" ItemsSource="{Binding FileTypes}"/>
                     </StackPanel>
 
-                    
-
-                    <StackPanel Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal">
+                    <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
                         <TextBlock Margin="0,5,0,0" Name="SelectLogsFileTypeTextBox"/>
                         <ComboBox Margin="20,0,0,0" Name="LogsFileTypeComboBox" ItemsSource="{Binding FileTypes}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Row="2" Margin="0,15,0,0" Orientation="Horizontal" >
+                    <StackPanel Margin="0,15,0,0" Orientation="Horizontal" >
                         <TextBlock Margin="0,5,0,0" Name="SelectMaxFileSizeTextBox"/>
                         <NumberBox BackgroundSizing="OuterBorderEdge" Background="Red" SelectionHighlightColor="Red" Margin="20,0,0,0" SpinButtonPlacementMode="Inline" Minimum="1" Maximum="999999999" SmallChange="10" ValueChanged="MaxFileSizeNumberBox_ValueChanged" Value="{Binding MaxFileSize}" />
                     </StackPanel>
